--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,8 +22,7 @@
      .login-card{
           border-radius: 60px;
           max-width: 450px;
-          max-height: 700px;
-          height: 100%;
+          height: 600px;
           background-color: rgba(255, 255, 255, 0.7);
      }
      .nexa{
@@ -38,17 +37,17 @@
           border-radius: 100px;
      }
 </style>
-     <section id="login-section">
-          <div class="row m-0 p-0 ">
-               <div class="d-lg-block d-none col-lg-6 d-flex justify-content-center align-items-center flex-column" style="height: 100vh;">
+     <section id="login-section" class="d-flex justify-content-center align-items-center">
+          <div class="row m-0 p-0 d-flex justify-content-center align-items-center">
+               <div class="d-lg-block d-none col-lg-6 d-flex justify-content-center align-items-center flex-column">
                     <p class="login-title mx-auto mt-5">Permaculture: Plant the Seeds, Fulfill your Needs.</p>
                     <div class="plant-pic-container mx-auto">
                          <img src="/images/plant-pic.svg" alt="">
                     </div>
                     
                </div>
-               <div class="col-lg-6 p-4">
-                    <div class="login-card text-center mx-auto d-flex justify-content-center align-items-center" style="padding: 60px;">
+               <div class="col-lg-6 p-2">
+                    <div class="login-card text-center mx-auto d-flex justify-content-center align-items-center" style="padding: 45px;">
                          <form action="/login" method="post" class="login-form">
                               <div>
                                    <% if (locals.message) { %>
