--- a/views/index.ejs
+++ b/views/index.ejs
@@ -392,7 +392,7 @@ async function sendTokenToServer(token) {
     const notificationTitle = payload.notification.title;
     const notificationOptions = {
         body: payload.notification.body,
-        icon: '/path/to/icon.png'  // Update with your icon path
+        icon: './images/logo copy.svg'  // Update with your icon path
     };
     new Notification(notificationTitle, notificationOptions);
 });
