--- a/views/partials/UserFooter.ejs
+++ b/views/partials/UserFooter.ejs
@@ -63,7 +63,7 @@ $(document).ready(function() {
     } else if (currentPath.includes('/email')) {
         pageTitle.text('EMAIL US');
     }else if(currentPath.includes('/posts')){
-        pageTitle.text('POSTS');
+        pageTitle.text('COMMUNITY FORUM');
     }
 
     // Menu toggle and X-bar transformation
