--- a/views/partials/UserHeader.ejs
+++ b/views/partials/UserHeader.ejs
@@ -17,6 +17,10 @@
 
     <link rel="stylesheet" href="./styles/user.css">
 
+    <!-- FIREBASE -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-messaging.js"></script>
+
 </head>
 <body>
     <div class="d-flex" id="wrapper">
@@ -51,9 +55,130 @@
                     
                 </div>
                 <div class="d-flex align-items-center">
-                    <p class="my-0 mx-3"> <%= name  %> </p>
-                    <img src="<%= profilePicture %>" style="width: 50px; border-radius: 50px; background-size: cover; " alt="">
+                    <p class="my-0"> <%= name  %> </p>
+                    <div class="dropdown">
+                        <button class="btn" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img id="navProfilePicture" src="<%= profilePicture %>" style="width: 50px; height: 50px; border-radius: 50px; object-fit: cover;" alt="">
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#changeProfileModal">Change Profile</a></li>
+                            <li><a class="dropdown-item" href="/change-password">Change Password</a></li>
+                            <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                        </ul>
+                    </div>
+                    
                 </div>
+
+                <div class="modal fade" id="changeProfileModal" tabindex="-1" aria-labelledby="changeProfileModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="changeProfileModalLabel">Change Profile</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form id="changeProfileForm" enctype="multipart/form-data">
+                                    <div class="d-flex justify-content-center">
+                                        <!-- Profile Picture Display -->
+                                        <img id="profilePictureDisplay" src="<%= profilePicture %>" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;" alt="Profile Picture">
+                                                                    
+                                    </div>
+                                  
+                                    <div class="mb-3">
+                                        <label for="profilePicture" class="form-label">Upload New Profile Picture</label>
+                                        <input type="file" class="form-control" id="profilePicture" name="profilePicture" accept="image/*">
+                                    </div>
+                                    <div class="row gap-2">
+                                        <div class="mb-3 col">
+                                            <label for="firstname" class="form-label">First Name</label>
+                                            <input type="text" class="form-control" id="firstname" name="firstname" value="<%= firstname %>">
+                                        </div>
+                                        <div class="mb-3 col">
+                                            <label for="lastname" class="form-label">Last Name</label>
+                                            <input type="text" class="form-control" id="lastname" name="lastname" value="<%= lastname %>">
+                                        </div>
+                                    </div>
+                                   
+                                    
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary" form="changeProfileForm">Save Changes</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex justify-content-center my-3 d-none" id="loadingSpinner">
+                        <div class="spinner-border text-success" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
+                </div>
+                
+                
             </div>   
 
-          
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+            <script>
+          $(document).ready(function() {
+            $('#changeProfileForm').on('submit', function(e) {
+                e.preventDefault();
+                var formData = new FormData(this);
+                
+                // Show loading spinner
+                $('#loadingSpinner').show();
+                
+                $.ajax({
+                    url: '/user/change-profile',
+                    type: 'POST',
+                    data: formData,
+                    contentType: false,
+                    processData: false,
+                    success: function(response) {
+                        // Hide loading spinner
+                        $('#loadingSpinner').hide();
+
+                        // Update the profile picture in the modal
+                        $('#profilePictureDisplay').attr('src', response.profilePicture);
+                        
+                        // Update the navbar profile picture
+                        $('#navProfilePicture').attr('src', response.profilePicture);
+                        
+                        // Update the user's full name in the navbar
+                        $('#userFullName').text(response.firstname + ' ' + response.lastname);
+                        
+                        // Close the modal
+                        $('#changeProfileModal').modal('hide');
+                        
+                        // Show success message
+                        alert(response.message);
+                        
+                        // Refresh the page to ensure all instances are updated
+                        location.reload();
+                    },
+                    error: function(xhr, status, error) {
+                        // Hide loading spinner
+                        $('#loadingSpinner').hide();
+
+                        var errorMessage = xhr.responseJSON ? xhr.responseJSON.error : 'An error occurred';
+                        alert(errorMessage);
+                    }
+                });
+            });
+
+            // Preview the selected image before upload
+            $('#profilePicture').on('change', function() {
+                var file = this.files[0];
+                if (file) {
+                    var reader = new FileReader();
+                    reader.onload = function(e) {
+                        $('#profilePictureDisplay').attr('src', e.target.result);
+                    }
+                    reader.readAsDataURL(file);
+                }
+            });
+        });
+
+            </script>
+            
