--- a/views/partials/UserHeader.ejs
+++ b/views/partials/UserHeader.ejs
@@ -55,7 +55,7 @@
                     
                 </div>
                 <div class="d-flex align-items-center">
-                    <p class="my-0"> <%= name  %> </p>
+                    <p class="my-0 mx-3"> <%= name  %> </p>
                     <div class="dropdown">
                         <button class="btn" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                             <img id="navProfilePicture" src="<%= profilePicture %>" style="width: 50px; height: 50px; border-radius: 50px; object-fit: cover;" alt="">
@@ -108,12 +108,7 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="d-flex justify-content-center my-3 d-none" id="loadingSpinner">
-                        <div class="spinner-border text-success" role="status">
-                            <span class="visually-hidden">Loading...</span>
-                        </div>
-                    </div>
+                    
                 </div>
                 
                 
@@ -121,13 +116,10 @@
 
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
             <script>
-          $(document).ready(function() {
+               $(document).ready(function() {
             $('#changeProfileForm').on('submit', function(e) {
                 e.preventDefault();
                 var formData = new FormData(this);
-                
-                // Show loading spinner
-                $('#loadingSpinner').show();
                 
                 $.ajax({
                     url: '/user/change-profile',
@@ -136,9 +128,6 @@
                     contentType: false,
                     processData: false,
                     success: function(response) {
-                        // Hide loading spinner
-                        $('#loadingSpinner').hide();
-
                         // Update the profile picture in the modal
                         $('#profilePictureDisplay').attr('src', response.profilePicture);
                         
@@ -158,9 +147,6 @@
                         location.reload();
                     },
                     error: function(xhr, status, error) {
-                        // Hide loading spinner
-                        $('#loadingSpinner').hide();
-
                         var errorMessage = xhr.responseJSON ? xhr.responseJSON.error : 'An error occurred';
                         alert(errorMessage);
                     }
@@ -179,6 +165,5 @@
                 }
             });
         });
-
             </script>
             
